[package]
name = "notion-client"
version = "1.0.11"
authors = ["Takashi Kasai <takassh23@gmail.com>"]
edition = "2021"
repository = "https://github.com/takassh/notion-client"
readme = "README.md"
description = "A Rust client library for the Notion API"
license = "MIT"


[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
derive_builder = "0.20.2"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_with = { version = "3.12.0", features = ["macros"] }
thiserror = "2.0.9"
urlencoding = "2.1.3"

[dev-dependencies]
notion-client = { path = "." }
tokio = { version = "1.42.0", features = ["full"] }
